<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/login_app"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:contentDescription="@string/email"
    android:backgroundTint="@android:color/white"
    tools:context=".login"
    >


    <TextView
        android:id="@+id/titulo_inicar_sesion"
        android:layout_width="154dp"
        android:layout_height="25dp"
        android:layout_marginTop="208dp"
        android:backgroundTint="@android:color/transparent"
        android:gravity="center"
        android:text="@string/IniciarSesión"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView"
        tools:text="Iniciar sesión" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="448dp"
        android:background="@android:color/transparent"
        android:text="@string/direcci_n_de_correo_electr_nico"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.041"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/editTextTextEmailAddress"
        android:layout_width="390dp"
        android:layout_height="48dp"
        android:layout_marginTop="28dp"
        android:autofillHints=""
        android:background="@color/silver"
        android:ems="10"
        android:hint="@string/correoEjemplo"
        android:inputType="textEmailAddress"
        android:textColorHint="#455A64"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.38"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="356dp"
        android:background="@android:color/transparent"
        android:text="@string/contrase_a"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.023"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/editTextTextPassword"
        android:layout_width="391dp"
        android:layout_height="52dp"
        android:layout_marginTop="97dp"
        android:layout_marginBottom="244dp"
        android:autofillHints=""
        android:background="@color/silver"
        android:ems="10"
        android:hint="@string/tucontrase_a"
        android:inputType="textPassword"
        android:textColorHint="#795548"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/editTextTextEmailAddress"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/btn_iniciar_sesion"
        android:layout_width="272dp"
        android:layout_height="50dp"
        android:layout_marginTop="112dp"
        android:layout_marginBottom="136dp"
        android:backgroundTint="@color/bright_orange"
        android:text="@string/IniciarSesión"

        android:textColor="@color/my_black"
        app:cornerRadius="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/editTextTextPassword"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/logo_jams_market"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/jamsmarket" />

    <TextView
        android:id="@+id/mensaje_crear_cuenta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="620dp"
        android:text="@string/mensaje_crear_cuenta"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.52"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <Button
        android:id="@+id/button2"
        android:layout_width="135dp"
        android:layout_height="48dp"
        android:layout_marginBottom="32dp"
        android:backgroundTint="@color/white"
        android:textColor="@color/my_black"

        android:text="@string/boton_crear_cuenta"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>