<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/registro_usuario"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="right"
    tools:context=".registro_usuario">

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="321dp"
        android:layout_height="143dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.388"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.027"
        app:srcCompat="@drawable/jamsmarket" />

    <EditText
        android:id="@+id/campo_pais"
        android:layout_width="288dp"
        android:layout_height="48dp"
        android:ems="10"
        android:inputType="text"
        android:minHeight="48dp"
        android:hint="@string/Pais"
        android:textColor="@color/my_black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.284"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.271" />

    <EditText
        android:id="@+id/campo_correo"
        android:layout_width="288dp"
        android:layout_height="48dp"
        android:ems="10"
        android:hint="@string/campodireccioncorreo"
        android:inputType="textEmailAddress"
        android:textColor="@color/my_black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.284"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/campo_pais"
        app:layout_constraintVertical_bias="0.06" />

    <EditText
        android:id="@+id/campo_nombre"
        android:layout_width="136dp"
        android:layout_height="48dp"
        android:layout_marginTop="73dp"
        android:layout_marginBottom="200dp"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/nombre"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.127"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/campo_correo"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/campo_apellido"
        android:layout_width="136dp"
        android:layout_height="48dp"
        android:layout_marginTop="70dp"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/apellido"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.68"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/campo_correo"
        app:layout_constraintVertical_bias="0.01" />

    <EditText
        android:id="@+id/campo_nombre_usuario"
        android:layout_width="288dp"
        android:layout_height="48dp"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/nombre_usuario"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.284"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/campo_nombre"
        app:layout_constraintVertical_bias="0.052" />

    <EditText
        android:id="@+id/campo_contrase_a"
        android:layout_width="288dp"
        android:layout_height="48dp"
        android:ems="10"
        android:hint="@string/contrase_a"
        android:inputType="textPassword"
        android:textColor="@color/my_black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.284"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/campo_nombre_usuario"
        app:layout_constraintVertical_bias="0.085" />

    <CheckBox
        android:id="@+id/checkbox_aceptar_terminos_y_condiciones"
        android:layout_width="256dp"
        android:layout_height="55dp"
        android:layout_marginBottom="148dp"
        android:text="@string/acuerdo_condiciones"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.225"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button_confirm"
        android:layout_width="272dp"
        android:layout_height="50dp"
        android:layout_marginTop="112dp"
        android:backgroundTint="@color/bright_orange"
        android:text="@string/continuar"

        android:textColor="@color/my_black"
        app:cornerRadius="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.251"
        app:layout_constraintStart_toStartOf="parent"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.868" />

    <TextView
        android:id="@+id/mensaje_inicio_sesion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mensaje_inicar_sesion"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.39"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_confirm"
        app:layout_constraintVertical_bias="0.178" />

    <Button
        android:id="@+id/boton_ir_inicio_sesion"
        android:layout_width="90dp"
        android:layout_height="48dp"
        android:backgroundTint="@color/white"
        android:gravity="top|start"

        android:padding="0dp"
        android:text="@string/IniciarSesión"
        android:textAlignment="viewStart"
        android:textColor="@color/my_black"
        android:textSize="10sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.741"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_confirm"
        app:layout_constraintVertical_bias="0.37" />

    <TextView
        android:id="@+id/mensaje_ir_politicas_privacidad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/politica_privacidad"
        android:textColor="@color/my_black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.397"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/mensaje_inicio_sesion"
        app:layout_constraintVertical_bias="1.0" />

</androidx.constraintlayout.widget.ConstraintLayout>