<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Ingreso_numero_usuario">

    <ImageView
        android:id="@+id/logo_jamsStore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/logo_jams_market"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/jamsmarket"/>

    <TextView
        android:id="@+id/titulo_inicar_sesion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="208dp"
        android:backgroundTint="@android:color/transparent"
        android:gravity="center"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/logo_jamsStore"
        tools:text="@string/ingrese_su_n_mero_de_celular" />

    <EditText
        android:id="@+id/inputNumeroCelular"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:hint="@string/numero_de_celular"
        android:inputType="phone"
        android:minHeight="48dp"
        app:layout_constraintTop_toBottomOf="@+id/logo_jamsStore"
        tools:layout_editor_absoluteX="0dp" />

    <Button
        android:id="@+id/btnEnviarNumero"
        android:layout_width="272dp"
        android:layout_height="50dp"
        android:backgroundTint="@color/bright_orange"
        android:text="@string/enviar_numero"

        android:textColor="@color/my_black"
        app:cornerRadius="10dp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo_jamsStore" />

</androidx.constraintlayout.widget.ConstraintLayout>